kubernetes/deployment.yml
{
  "kind": "Deployment",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "kubspring",
    "namespace": "default",
    "selfLink": "/apis/extensions/v1beta1/namespaces/default/deployments/kubspring",
    "uid": "960e80c8-33a7-11ea-ac64-5641ef59d9a2",
    "resourceVersion": "44371",
    "generation": 1,
    "creationTimestamp": "2020-01-13T12:49:05Z",
    "labels": {
      "k8s-app": "kubspring"
    },
    "annotations": {
      "deployment.kubernetes.io/revision": "1"
    }
  },
  "spec": {
    "replicas": 1,
    "selector": {
      "matchLabels": {
        "k8s-app": "kubspring"
      }
    },
    "template": {
      "metadata": {
        "name": "kubspring",
        "creationTimestamp": null,
        "labels": {
          "k8s-app": "kubspring"
        }
      },
      "spec": {
        "containers": [
          {
            "name": "kubspring",
            "image": "springorg/springrepo",
            "resources": {},
            "terminationMessagePath": "/dev/termination-log",
            "terminationMessagePolicy": "File",
            "imagePullPolicy": "Always",
            "securityContext": {
              "privileged": false
            }
          }
        ],
        "restartPolicy": "Always",
        "terminationGracePeriodSeconds": 30,
        "dnsPolicy": "ClusterFirst",
        "securityContext": {},
        "schedulerName": "default-scheduler"
      }
    },
    "strategy": {
      "type": "RollingUpdate",
      "rollingUpdate": {
        "maxUnavailable": "25%",
        "maxSurge": "25%"
      }
    },
    "revisionHistoryLimit": 10,
    "progressDeadlineSeconds": 600
  },
  "status": {
    "observedGeneration": 1,
    "replicas": 1,
    "updatedReplicas": 1,
    "readyReplicas": 1,
    "availableReplicas": 1,
    "conditions": [
      {
        "type": "Available",
        "status": "True",
        "lastUpdateTime": "2020-01-10T12:49:08Z",
        "lastTransitionTime": "2020-01-10T12:49:08Z",
        "reason": "MinimumReplicasAvailable",
        "message": "Deployment has minimum availability."
      },
      {
        "type": "Progressing",
        "status": "True",
        "lastUpdateTime": "2020-01-10T12:49:08Z",
        "lastTransitionTime": "2020-01-10T12:49:05Z",
        "reason": "NewReplicaSetAvailable",
        "message": "ReplicaSet \"kubspring-59b85c444\" has successfully progressed."
      }
    ]
  }
}
